fix(pager): select value in adaptive pager has wrong vertical alignment in Safari

--- a/packages/nouvelle/scss/input/_layout.scss
+++ b/packages/nouvelle/scss/input/_layout.scss
@@ -68,6 +68,7 @@
         padding-block: var( --kendo-input-padding-y,  0 );
         appearance: auto;
         -webkit-appearance: none;
+        align-items: center;
     }
 
 
